# gpt-compliance

./: .gitignore  MANIFEST.in  README.md  setup.cfg
compliance/: __main__.py
gpt-compliance/: __main__.py
test/: prompt
