[metadata]
name = gpt-compliance
description = Python script was designed to facilitate automatic generation of compliance rules, using both Terraform-Compliance and Azure Policy.
author = Sylvain Beynard
maintainer = Sylvain Beynard
license = MIT
license_file = LICENSE
version = file: VERSION
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

    Topic :: System :: Systems Administration
    Topic :: Utilities

keywords =
    terraform
    terraform-compliance
    azure
    rules
    security
    policy

[options]
packages = find:
include_package_data = true
install_requires =
    setuptools
    importlib_resources
    gensim
    jieba
    openai

[options.entry_points]
console_scripts = 
    gpt-compliance = compliance.__main__:main

[bdist_wheel]
universal = 1
